src/css/index.css
.submit-button {
  width: 16rem;
  height: 3.5rem;
  color: #fff;
  font-weight: 500;
  font-size: 2.4rem;
  line-height: 4rem;
  text-align: center;
  background-color: #c96567;
  border-radius: 1rem;
  margin-left: auto;
  margin-right: auto;
  border: none; }

.footer {
  height: 35rem;
  background-color: #97aabd;
  position: relative;
  padding-top: 5rem; }

.blue-pink-logo {
  position: absolute;
  bottom: 0rem;
  left: 9rem; }
  @media only screen and (min-width: 700px) {
    .blue-pink-logo {
      left: 28rem; } }
  @media only screen and (min-width: 700px) {
    .blue-pink-logo {
      left: 53rem; } }

.bottomnav {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #314455;
  position: absolute;
  bottom: 0;
  width: 100%; }

.signup-form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 3rem; }

.form-field {
  margin: 2rem;
  border-radius: 1rem;
  width: 20rem;
  height: 3rem; }

.form-container {
  padding: 0; }

.story-form-field {
  height: 50rem;
  width: 30rem;
  margin: 2rem;
  border-radius: 1rem; }
  @media only screen and (min-width: 700px) {
    .story-form-field {
      width: 50rem; } }
  @media only screen and (min-width: 1000px) {
    .story-form-field {
      width: 80rem; } }

.nav-item {
  margin: 1rem;
  font-size: 1.8rem; }

.white-hamburger {
  position: absolute;
  left: 1rem;
  top: 1rem;
  display: block; }
  @media only screen and (min-width: 600px) {
    .white-hamburger {
      display: none; } }

.close-button {
  text-align: right;
  padding: 0 1rem 0 0; }

.dropdown-content {
  position: absolute;
  top: -2rem;
  left: -1rem;
  margin: 1rem;
  display: flex;
  flex-direction: column;
  background-color: #97aabd;
  color: white;
  border-radius: 0 1rem 1rem 0;
  font-size: 2.2rem;
  padding: 1rem; }

.dropdown-item {
  padding: 0.5rem; }

.header {
  position: relative;
  height: 7rem; }

.pink-logo {
  position: absolute;
  right: 0;
  top: 0; }

.dropdown-off {
  display: none; }

.topnav {
  display: none; }
  @media only screen and (min-width: 600px) {
    .topnav {
      padding: 2rem;
      font-family: 'Roboto', sans-serif;
      font-size: 1.4rem;
      width: 50%;
      display: flex;
      flex-direction: row;
      text-decoration: none;
      color: #fff; } }

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: inherit; }

html {
  font-size: 62.5%;
  margin: 0;
  padding: 0;
  height: 100vh; }

body {
  box-sizing: border-box;
  background-color: #314455;
  margin: 0;
  padding: 0;
  height: 100vh; }

.App {
  height: 100vh; }

a:link {
  text-decoration: none;
  color: inherit; }

a:visited {
  text-decoration: none;
  color: inherit; }

body {
  font-family: 'Roboto', sans-serif;
  font-size: 3.6rem;
  color: #fff;
  text-decoration: none; }

.h1 {
  font-family: Montserrat, sans-serif;
  font-weight: 600;
  font-size: 3.6rem;
  text-align: center;
  margin-bottom: 3rem; }

.p {
  font-size: 1.8rem;
  text-align: center; }

label {
  font-size: 1.4rem; }

.form-text {
  margin: 8rem auto 2rem auto;
  padding: 0 1rem; }

.footer-text {
  padding: 1rem;
  max-width: 30rem;
  margin: 0 auto; }

.story-text {
  max-width: 50rem;
  margin: 0 auto;
  padding: 1rem; }

.thankyou-wrapper {
  background-color: #c96567;
  height: 100%; }

.thankyou-text-container {
  margin: 15rem auto;
  max-width: 40rem;
  padding: 0 2rem;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column; }

